# visual_annotation

./: .markdown-link-check.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  _copier_answers.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-ci-image.yml  ci.yml
docs/: README.md
docs/visual_annotation/: README.md  dependencies.md  usage.md
docs/visual_annotation/architecture/: README.md  system.md
docs/visual_annotation/architecture/concepts/: README.md  box-annotation.md  configuration-and-validation.md  mask-annotation.md  page-element-compatibility.md  point-annotation.md  public-boundary-and-errors.md
docs/visual_annotation/architecture/flows/: README.md  annotation-lifecycle.md  config-lifecycle.md
docs/visual_annotation/verification/: README.md  public-boundary-and-errors.md  workbench.md
docs/visual_annotation/verification/e2e/: README.md  box-annotation.md  examples.md  mask-annotation.md  page-element-compatibility.md  point-annotation.md  public-boundary.md
examples/visual_annotation/: __init__.py
scripts/: README.md
scripts/env/: doctor.sh
src/visual_annotation/: __init__.py
src/visual_annotation/_api/: __init__.py  annotation.py  config.py  defaults.py  errors.py  media.py  types.py
src/visual_annotation/_internal/: __init__.py
src/visual_annotation/_internal/annotator/: __init__.py
src/visual_annotation/_internal/config/: __init__.py  assembly.py  models.py  state.py  validation.py
src/visual_annotation/_internal/contracts/: __init__.py
src/visual_annotation/_internal/handlers/: __init__.py  base.py  box.py  factory.py  mask.py  point.py
src/visual_annotation/_internal/masks/: __init__.py
src/visual_annotation/_internal/resolver/: __init__.py
src/visual_annotation/_internal/service/: __init__.py
tests/: README.md  conftest.py
tests/visual_annotation/: __init__.py  conftest.py
tests/visual_annotation/e2e/: __init__.py
tests/visual_annotation/e2e/box_annotation/: test_box_pipeline.py
tests/visual_annotation/e2e/examples/: __init__.py  test_examples_smoke.py
tests/visual_annotation/e2e/mask_annotation/: test_mask_pipeline.py
tests/visual_annotation/e2e/page_element_compatibility/: test_page_element_pipeline.py
tests/visual_annotation/e2e/point_annotation/: test_point_pipeline.py
tests/visual_annotation/e2e/public_boundary/: __init__.py  test_public_config_pipeline.py
tests/visual_annotation/integration/: __init__.py  test_config_lifecycle.py  test_service_integration.py
tests/visual_annotation/property_based/: __init__.py
tests/visual_annotation/property_based/internal/: __init__.py
tests/visual_annotation/property_based/public_contract/: __init__.py  test_config_contract.py  test_coordinate_properties.py
tests/visual_annotation/support/: __init__.py  builders.py
tests/visual_annotation/unit/: __init__.py  test_internal_masks.py  test_public_config_and_types.py  test_public_package.py
tests/visual_annotation/unit/handlers/: __init__.py  test_box_handler.py  test_factory.py  test_mask_handler.py  test_point_handler.py
workbench/visual_annotation/: __init__.py  box_annotation.py  mask_annotation.py  page_element_compatibility.py  point_annotation.py
